# learn_clean_arch_fastapi

./: .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
migrations/: env.py
migrations/versions/: 61d2da0132e5_create_table.py  a0719f6fe343_init.py  b4d2e3210ead_init.py
postgres/: create-databases.sh
src/app/: constants.py  main.py
src/app/application/interfaces/: user_service.py
src/app/domain/entities/: __init__.py  user.py
src/app/domain/repositories/: user_repository.py
src/app/domain/use_cases/interfaces/: use_case.py
src/app/domain/use_cases/user/: create_user.py  get_user.py  list_users.py
src/app/infrastructure/config/: database.py  settings.py
src/app/infrastructure/dependencies/: auth_dependencies.py  user_dependencies.py
src/app/infrastructure/repositories/: sqlmodel_user_repository.py
src/app/infrastructure/security/: jwt.py  password.py
src/app/presentation/controllers/: auth_controller.py  user_controller.py
src/app/presentation/schemas/auth/: request.py  response.py
src/app/presentation/schemas/common/: pagination.py
src/app/presentation/schemas/user/: request.py  response.py
src/app/use_cases/auth/: login_user.py  verify_token.py
src/app/use_cases/interfaces/: use_case.py
src/app/use_cases/user/: create_user.py  get_user.py  list_users.py
tests/: conftest.py
tests/mocks/: user.py
tests/unit/domain/entities/: test_user.py
tests/unit/infrastructure/repositories/: test_sqlmodel_user_repository.py
tests/unit/infrastructure/security/: test_jwt.py  test_password.py
tests/unit/presentation/controllers/: test_create_user_user_controller.py  test_get_user_user_controller.py  test_list_users_user_controller.py  test_user_controller.py
tests/unit/presentation/schemas/auth/: test_request.py
tests/unit/presentation/schemas/user/: test_request.py
tests/unit/use_cases/user/: test_create_user.py  test_get_user.py  test_list_users.py
