[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Walber Vaz da Silva",email = "wvs.walber@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "psycopg[binary] (>=3.2.5,<4.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
