[project]
name = "app"
version = "0.1.0"
description = ""
authors = [{ name = "Walber Vaz da Silva", email = "wvs.walber@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
  "fastapi[standard] (>=0.115.8,<0.116.0)",
  "uvicorn[standard] (>=0.34.0,<0.35.0)",
  "psycopg[binary] (>=3.2.5,<4.0.0)",
  "sqlmodel (>=0.0.22,<0.0.23)",
  "gunicorn (>=23.0.0,<24.0.0)",
  "pwdlib[argon2] (>=0.2.1,<0.3.0)",
  "pydantic-settings (>=2.8.0,<3.0.0)",
  "alembic (>=1.14.1,<2.0.0)",
]

[tool.poetry]
packages = [{ include = "app", from = "src" }]


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"
ruff = "^0.9.7"
pre-commit = "^4.1.0"
pytest-asyncio = "^0.25.3"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']
target-version = 'py313'

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev src/app/main.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=src/app -vv'
post_test = 'coverage html'
makemigrations = 'alembic revision --autogenerate -m'
migrate = 'alembic upgrade head'

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
